--- a/website/blog/2024-02-12-How-a-POC-became-a-production-ready-Hudi-data-lakehouse-through-close-team-collaboration.mdx
+++ b/website/blog/2024-02-12-How-a-POC-became-a-production-ready-Hudi-data-lakehouse-through-close-team-collaboration.mdx
@@ -2,7 +2,7 @@
 title: "How a POC became a production-ready Hudi data lakehouse through close team collaboration"
 excerpt: "How a POC became a production-ready Hudi data lakehouse through close team collaboration"
 author: Xiaoxiao Rey and Hussein Awala
-category: deep-dive
+category: how-to
 image: /assets/images/blog/2024-02-12-How-a-POC-became-a-production-ready-Hudi-data-lakehouse-through-close-team-collaboration.png
 tags:
 - leboncoin
